docs/refactor/p11_evidence/topology_restore_20260707/backup_dsqwen-14b_deployments_pre.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"tre.aibrix.io/gpu-ids":"0,1","tre.aibrix.io/gpu-uuids":"GPU-71f560a8-e090-c7e6-325f-2e386c08136f,GPU-4bcbcb0c-7eaf-64a1-b3e5-b07cb81d3a96"},"labels":{"model.aibrix.ai/name":"dsqwen-14b","model.aibrix.ai/port":"8000","tre.aibrix.io/gpu-ids":"0-1","tre.aibrix.io/managed":"true","tre.aibrix.io/node":"nscc-ds-4a100-node10","tre.aibrix.io/routable":"true"},"name":"dsqwen-14b-nscc-ds-4a100-node10-gpu-0-1","namespace":"defa [...]
      tre.aibrix.io/gpu-ids: 0,1
      tre.aibrix.io/gpu-uuids: GPU-71f560a8-e090-c7e6-325f-2e386c08136f,GPU-4bcbcb0c-7eaf-64a1-b3e5-b07cb81d3a96
    creationTimestamp: "2026-07-05T05:58:29Z"
    generation: 1
    labels:
      model.aibrix.ai/name: dsqwen-14b
      model.aibrix.ai/port: "8000"
      tre.aibrix.io/gpu-ids: 0-1
      tre.aibrix.io/managed: "true"
      tre.aibrix.io/node: nscc-ds-4a100-node10
      tre.aibrix.io/routable: "true"
    name: dsqwen-14b-nscc-ds-4a100-node10-gpu-0-1
    namespace: default
    resourceVersion: "192783990"
    uid: f67c09a2-e08f-45fe-b9d1-136ee3cc66a7
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: dsqwen-14b-nscc-ds-4a100-node10-gpu-0-1
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          tre.aibrix.io/gpu-ids: 0,1
          tre.aibrix.io/gpu-uuids: GPU-71f560a8-e090-c7e6-325f-2e386c08136f,GPU-4bcbcb0c-7eaf-64a1-b3e5-b07cb81d3a96
        creationTimestamp: null
        labels:
          app: dsqwen-14b-nscc-ds-4a100-node10-gpu-0-1
          model.aibrix.ai/name: dsqwen-14b
          model.aibrix.ai/port: "8000"
          tre.aibrix.io/gpu-ids: 0-1
          tre.aibrix.io/managed: "true"
          tre.aibrix.io/node: nscc-ds-4a100-node10
          tre.aibrix.io/routable: "true"
      spec:
        containers:
        - command:
          - python3
          - -m
          - vllm.entrypoints.openai.api_server
          - --host
          - 0.0.0.0
          - --port
          - "8000"
          - --uvicorn-log-level
          - warning
          - --model
          - /data/nfs_shared_data/Models/DeepSeek-R1-Distill-Qwen-14B
          - --served-model-name
          - dsqwen-14b
          - --enable_sleep_mode
          - --tensor-parallel-size
          - "2"
          - --max-model-len
          - "12288"
          env:
          - name: NVIDIA_VISIBLE_DEVICES
            value: GPU-71f560a8-e090-c7e6-325f-2e386c08136f,GPU-4bcbcb0c-7eaf-64a1-b3e5-b07cb81d3a96
          - name: CUDA_VISIBLE_DEVICES
            value: 0,1
          - name: VLLM_SERVER_DEV_MODE
            value: "1"
          - name: VLLM_WORKER_MULTIPROC_METHOD
            value: spawn
          - name: VLLM_USE_MODELSCOPE
            value: "True"
          image: vllm/vllm-openai:0.10.1-sleep
          imagePullPolicy: IfNotPresent
          name: vllm-openai
          ports:
          - containerPort: 8000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /dev/shm
            name: shm
          - mountPath: /data
            name: models-volume
        dnsPolicy: ClusterFirst
        nodeName: nscc-ds-4a100-node10
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 20Gi
          name: shm
        - hostPath:
            path: /data
            type: ""
          name: models-volume
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-07-05T05:58:31Z"
      lastUpdateTime: "2026-07-05T05:58:31Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-07-05T05:58:29Z"
      lastUpdateTime: "2026-07-05T05:58:31Z"
      message: ReplicaSet "dsqwen-14b-nscc-ds-4a100-node10-gpu-0-1-77d5997485" has
        successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"tre.aibrix.io/gpu-ids":"2,3","tre.aibrix.io/gpu-uuids":"GPU-28af749d-4081-d7b6-0c14-cf9c29aa213d,GPU-76a392a5-b027-42be-fb8f-1bfe9079b47c"},"labels":{"model.aibrix.ai/name":"dsqwen-14b","model.aibrix.ai/port":"8000","tre.aibrix.io/gpu-ids":"2-3","tre.aibrix.io/managed":"true","tre.aibrix.io/node":"nscc-ds-4a100-node10","tre.aibrix.io/routable":"true"},"name":"dsqwen-14b-nscc-ds-4a100-node10-gpu-2-3","namespace":"defa [...]
      tre.aibrix.io/gpu-ids: 2,3
      tre.aibrix.io/gpu-uuids: GPU-28af749d-4081-d7b6-0c14-cf9c29aa213d,GPU-76a392a5-b027-42be-fb8f-1bfe9079b47c
    creationTimestamp: "2026-07-05T06:00:56Z"
    generation: 1
    labels:
      model.aibrix.ai/name: dsqwen-14b
      model.aibrix.ai/port: "8000"
      tre.aibrix.io/gpu-ids: 2-3
      tre.aibrix.io/managed: "true"
      tre.aibrix.io/node: nscc-ds-4a100-node10
      tre.aibrix.io/routable: "true"
    name: dsqwen-14b-nscc-ds-4a100-node10-gpu-2-3
    namespace: default
    resourceVersion: "192784770"
    uid: d7f8841e-986a-4e3a-b72f-7b980c417f01
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: dsqwen-14b-nscc-ds-4a100-node10-gpu-2-3
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          tre.aibrix.io/gpu-ids: 2,3
          tre.aibrix.io/gpu-uuids: GPU-28af749d-4081-d7b6-0c14-cf9c29aa213d,GPU-76a392a5-b027-42be-fb8f-1bfe9079b47c
        creationTimestamp: null
        labels:
          app: dsqwen-14b-nscc-ds-4a100-node10-gpu-2-3
          model.aibrix.ai/name: dsqwen-14b
          model.aibrix.ai/port: "8000"
          tre.aibrix.io/gpu-ids: 2-3
          tre.aibrix.io/managed: "true"
          tre.aibrix.io/node: nscc-ds-4a100-node10
          tre.aibrix.io/routable: "true"
      spec:
        containers:
        - command:
          - python3
          - -m
          - vllm.entrypoints.openai.api_server
          - --host
          - 0.0.0.0
          - --port
          - "8000"
          - --uvicorn-log-level
          - warning
          - --model
          - /data/nfs_shared_data/Models/DeepSeek-R1-Distill-Qwen-14B
          - --served-model-name
          - dsqwen-14b
          - --enable_sleep_mode
          - --tensor-parallel-size
          - "2"
          - --max-model-len
          - "12288"
          env:
          - name: NVIDIA_VISIBLE_DEVICES
            value: GPU-28af749d-4081-d7b6-0c14-cf9c29aa213d,GPU-76a392a5-b027-42be-fb8f-1bfe9079b47c
          - name: CUDA_VISIBLE_DEVICES
            value: 0,1
          - name: VLLM_SERVER_DEV_MODE
            value: "1"
          - name: VLLM_WORKER_MULTIPROC_METHOD
            value: spawn
          - name: VLLM_USE_MODELSCOPE
            value: "True"
          image: vllm/vllm-openai:0.10.1-sleep
          imagePullPolicy: IfNotPresent
          name: vllm-openai
          ports:
          - containerPort: 8000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /dev/shm
            name: shm
          - mountPath: /data
            name: models-volume
        dnsPolicy: ClusterFirst
        nodeName: nscc-ds-4a100-node10
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 20Gi
          name: shm
        - hostPath:
            path: /data
            type: ""
          name: models-volume
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-07-05T06:00:58Z"
      lastUpdateTime: "2026-07-05T06:00:58Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-07-05T06:00:56Z"
      lastUpdateTime: "2026-07-05T06:00:58Z"
      message: ReplicaSet "dsqwen-14b-nscc-ds-4a100-node10-gpu-2-3-66f57f5575" has
        successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"tre.aibrix.io/gpu-ids":"0,1","tre.aibrix.io/gpu-uuids":"GPU-689a3e93-68db-0dac-160b-6a791cf246e8,GPU-d0de9f25-c059-d2ee-e7c4-c242bbdc76c7"},"labels":{"model.aibrix.ai/name":"dsqwen-14b","model.aibrix.ai/port":"8000","tre.aibrix.io/gpu-ids":"0-1","tre.aibrix.io/managed":"true","tre.aibrix.io/node":"nscc-ds-4a100-node9","tre.aibrix.io/routable":"true"},"name":"dsqwen-14b-nscc-ds-4a100-node9-gpu-0-1","namespace":"defaul [...]
      tre.aibrix.io/gpu-ids: 0,1
      tre.aibrix.io/gpu-uuids: GPU-689a3e93-68db-0dac-160b-6a791cf246e8,GPU-d0de9f25-c059-d2ee-e7c4-c242bbdc76c7
    creationTimestamp: "2026-07-05T10:11:24Z"
    generation: 1
    labels:
      model.aibrix.ai/name: dsqwen-14b
      model.aibrix.ai/port: "8000"
      tre.aibrix.io/gpu-ids: 0-1
      tre.aibrix.io/managed: "true"
      tre.aibrix.io/node: nscc-ds-4a100-node9
      tre.aibrix.io/routable: "true"
    name: dsqwen-14b-nscc-ds-4a100-node9-gpu-0-1
    namespace: default
    resourceVersion: "192861517"
    uid: 89506860-b24d-432e-a9ab-6566b1c55646
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: dsqwen-14b-nscc-ds-4a100-node9-gpu-0-1
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          tre.aibrix.io/gpu-ids: 0,1
          tre.aibrix.io/gpu-uuids: GPU-689a3e93-68db-0dac-160b-6a791cf246e8,GPU-d0de9f25-c059-d2ee-e7c4-c242bbdc76c7
        creationTimestamp: null
        labels:
          app: dsqwen-14b-nscc-ds-4a100-node9-gpu-0-1
          model.aibrix.ai/name: dsqwen-14b
          model.aibrix.ai/port: "8000"
          tre.aibrix.io/gpu-ids: 0-1
          tre.aibrix.io/managed: "true"
          tre.aibrix.io/node: nscc-ds-4a100-node9
          tre.aibrix.io/routable: "true"
      spec:
        containers:
        - command:
          - python3
          - -m
          - vllm.entrypoints.openai.api_server
          - --host
          - 0.0.0.0
          - --port
          - "8000"
          - --uvicorn-log-level
          - warning
          - --model
          - /data/nfs_shared_data/Models/DeepSeek-R1-Distill-Qwen-14B
          - --served-model-name
          - dsqwen-14b
          - --enable_sleep_mode
          - --tensor-parallel-size
          - "2"
          - --max-model-len
          - "12288"
          env:
          - name: NVIDIA_VISIBLE_DEVICES
            value: GPU-689a3e93-68db-0dac-160b-6a791cf246e8,GPU-d0de9f25-c059-d2ee-e7c4-c242bbdc76c7
          - name: CUDA_VISIBLE_DEVICES
            value: 0,1
          - name: VLLM_SERVER_DEV_MODE
            value: "1"
          - name: VLLM_WORKER_MULTIPROC_METHOD
            value: spawn
          - name: VLLM_USE_MODELSCOPE
            value: "True"
          image: vllm/vllm-openai:0.10.1-sleep
          imagePullPolicy: IfNotPresent
          name: vllm-openai
          ports:
          - containerPort: 8000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /dev/shm
            name: shm
          - mountPath: /data
            name: models-volume
        dnsPolicy: ClusterFirst
        nodeName: nscc-ds-4a100-node9
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 20Gi
          name: shm
        - hostPath:
            path: /data
            type: ""
          name: models-volume
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-07-05T10:11:26Z"
      lastUpdateTime: "2026-07-05T10:11:26Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-07-05T10:11:24Z"
      lastUpdateTime: "2026-07-05T10:11:26Z"
      message: ReplicaSet "dsqwen-14b-nscc-ds-4a100-node9-gpu-0-1-7b8c77ddc5" has
        successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
